Fixing UI alignments for both donut and progress charts.

--- a/webapp/src/app/shared/doughnut-chart/doughnut-chart.component.css
+++ b/webapp/src/app/shared/doughnut-chart/doughnut-chart.component.css
@@ -54,7 +54,7 @@
 }
 
 .donut-container-statsDoughnut .graph-legend-cont{
-    margin-top: 2em;
+    margin: 2em 1em;
 }
 
 .legend-text-count {
